Bug 578096: XHR locks file longer than necessary. r=sicking